[tool.poetry]
name = "gradient-utils"
version = "0.1.0"
description = "This is an SDK for performing Machine Learning with Gradient."
authors = ["Paperspace Co. <info@paperspace.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.6"
wheel = "^0.35.1"
hyperopt = "^0.2.5"
pymongo = "^3.11.0"
prometheus-client = "^0.8.0"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
tox = "^3.20.1"
mock = "^4.0.2"
pytest = "^6.1.2"
requests = "^2.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
